src/home/home.scss
div.main-panel {
    padding: 16px;
    background-color: rgba(0,0,0,0);
    margin-bottom: 20px;

    > div {
        height: calc(100vh - 619px);
        min-height: 25vh;
        margin-top: 15px;
        overflow-y: auto;
    }
    div.row {
        padding: 0px;
        margin: 0px;
    }
    div.panel-vid p {
        text-align: center;
    }
    div.panel-messages {
        background-color: lightgray;
    }
}

div.panel h2 {
    direction: rtl;
    width: 100%;
    border-bottom: solid 2px gray;
}

div.member-of-the-day {
    height: 74px;
    background-color: rgba(62,65,66,1.0);
    color: white;
    font-size: 150%;
    padding-right: 16px;

    span {
        float: right;
    }
}

li {
    list-style-type: none;
}

ul.message {
    margin: 0;
    padding: 0;

    p {
        text-align: justify;
        padding-left: 12px;
    }
}

div.story-prefix {
    p {
        text-align: justify;
        padding-left:12px;
    }
}

